<resources>
    <string name="app_name">LISTMAKER</string>
    <string name="LDLogo">L</string>
    <string name="boton_ingresar">INGRESAR</string>
    <string name="textoBienvenidos">BIENVENIDOS</string>
    <string name="descripcionFondo">TODO</string>
    <string name="editTextIngreseSuTarea">ingrese su tarea</string>
    <string name="buttonAgreagrTarea">Agregar Tarea</string>
    <string name="menuText">MENU</string>
    <string name="listar">LISTAR TAREAS</string>
    <string name="completadas">COMPLETADAS</string>
    <string name="idTCom">Tareas completadas</string>
    <string name="mostImg">Mostrar Imagen</string>
    <string name="urlingresada">Mostrar Imagen</string>
    <string name="imgUrl">Imagen desde URL</string>



</resources>